@@ -15,6 +15,7 @@ pyReScene 0.6
              on a bad MP3 file fixed
  * ReScene: SRR was stored in subfolder instead of output folder
  * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
+ * ReScene: -x and -d extracts to folder named after .srr in the output path
 
 pyReScene 0.5.1 (2013-07-14)
 ===============
